--- a/src/routes/Home/Home.module.css
+++ b/src/routes/Home/Home.module.css
@@ -60,6 +60,7 @@
 
 .selector {
   flex-shrink: 0;
+  width: 100%;
   padding-bottom: 12px;
   z-index: 5;
   pointer-events: none;
